Temporarily mark lib.msun.{cbrt_test.cbrtl_powl,trig_test.reduction} expected failure after clang700-import merge

PR:		234040
Reviewed by:	ngie, markj
Approved by:	markj (mentor)
Sponsored by:	The FreeBSD Foundation
Differential Revision:	https://reviews.freebsd.org/D18938